[tool.poetry]
name = "hashwatch"
version = "0.1.0"
description = ""
authors = ["johann-gorban <ivangorbanwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.43"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
